# multi-agent-reference-arch

./: .gitignore  README.md  pyproject.toml  start_agent.sh  start_remote_agent.sh
agent/: __init__.py  create_b2b_agent.py  invoke_agent.py  main.py  pyproject.toml
agent/models/: graph_models.py  llm_models.py
agent/nodes/: a2a_test.py  acme_agent.py  cart_manager.py  lowes_agent.py  lps_agent.py  planner.py  stark_agent.py  summarizer.py
agent/nodes/common/: find_plan_for_agent.py  model.py
remote_agent/: __init__.py  agent.py  llm_models.py  main.py  main_agent.py  pyproject.toml
