[project]
name = "agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "a2a-sdk>=1.0.3",
    "fastapi[standard]>=0.136.1",
    "langchain>=1.3.0",
    "langchain-openai>=1.2.1",
    "langfuse>=4.6.1",
    "langgraph>=1.2.0",
]
